Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/fields/Cotacao_de_soja__c.field-meta.xml
<CustomField>
    <fullName>Cotacao_de_soja__c</fullName>
    <description>Lista de Cotizaciones de Soja. Debe tener los mismos elementos que el campo Cotação de soja del objeto Contrato de Multiplicação.</description>
    <label>Cotação de soja</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>ASUNCION</fullName>
            </value>
            <value>
                <fullName>C. VALE</fullName>
            </value>
            <value>
                <fullName>C. VALE - Palotina (PR)</fullName>
            </value>
            <value>
                <fullName>CHICAGO</fullName>
            </value>
            <value>
                <fullName>COAMO</fullName>
            </value>
            <value>
                <fullName>COAMO - Campo Mourão (PR)</fullName>
            </value>
            <value>
                <fullName>COTRIJAL</fullName>
            </value>
            <value>
                <fullName>COTRIJAL - Não me Toque (RS)</fullName>
            </value>
            <value>
                <fullName>DOLAR</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Barreiras (BA)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Brasília (DF)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Campo Grande (MS)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Diamantino (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Londrina (PR)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Paragominas (PA)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Passo Fundo (RS)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Pedro Afonso (TO)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Primavera (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Rio Verde (GO)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Rondonópolis (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Sorriso (MT)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Uberlandia (MG)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Unaí (MG)</fullName>
            </value>
            <value>
                <fullName>S&amp;M - Uruçui (PI)</fullName>
            </value>
            <value>
                <fullName>SAFRAS &amp; MERCADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>