Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>