Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/listViews/Safra_11_12.listView-meta.xml
<ListView>
    <fullName>Safra_11_12</fullName>
    <columns>NAME</columns>
    <columns>Cotacao_de_soja__c</columns>
    <columns>Valor__c</columns>
    <columns>Fecha__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>11/12</value>
    </filters>
    <label>Safra 11/12</label>
</ListView>