Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/listViews/Safra_13_14.listView-meta.xml
<ListView>
    <fullName>Safra_13_14</fullName>
    <columns>NAME</columns>
    <columns>Cotacao_de_soja__c</columns>
    <columns>Valor__c</columns>
    <columns>Fecha__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>13/14</value>
    </filters>
    <label>Safra 13/14</label>
    <sharedTo>
        <group>Administracion</group>
        <role>Admin</role>
        <role>Administracion_y_Fiscalizador</role>
        <role>Licencias</role>
    </sharedTo>
</ListView>