Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/listViews/Safra_15_16.listView-meta.xml
<ListView>
    <fullName>Safra_15_16</fullName>
    <columns>NAME</columns>
    <columns>Cotacao_de_soja__c</columns>
    <columns>Valor__c</columns>
    <columns>Fecha__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>15/16</value>
    </filters>
    <label>Safra 15/16</label>
</ListView>