Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/listViews/Safra_16_17.listView-meta.xml
<ListView>
    <fullName>Safra_16_17</fullName>
    <columns>NAME</columns>
    <columns>Cotacao_de_soja__c</columns>
    <columns>Fecha__c</columns>
    <columns>Valor__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>16/17</value>
    </filters>
    <label>Safra 16/17</label>
    <language>es</language>
</ListView>