Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/listViews/Safra_17_18.listView-meta.xml
<ListView>
    <fullName>Safra_17_18</fullName>
    <columns>NAME</columns>
    <columns>Cotacao_de_soja__c</columns>
    <columns>Fecha__c</columns>
    <columns>Valor__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>17/18</value>
    </filters>
    <label>Safra 17/18</label>
    <language>es</language>
</ListView>