Salesforce/main/default/main/default/objects/Cotizacion_Soja__c/listViews/Safra_18_19.listView-meta.xml
<ListView>
    <fullName>Safra_18_19</fullName>
    <columns>NAME</columns>
    <columns>Cotacao_de_soja__c</columns>
    <columns>Fecha__c</columns>
    <columns>Valor__c</columns>
    <columns>Safra__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Safra__c</field>
        <operation>equals</operation>
        <value>18/19</value>
    </filters>
    <label>Safra 18/19</label>
    <language>es</language>
</ListView>